--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
 [submodule "external/android-ffmpeg"]
 	path = external/android-ffmpeg
-	url = https://github.com/scalio/android-ffmpeg
-    ignore = dirty
+	url = https://github.com/JayParikh20/android-ffmpeg.git
