--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,14 @@
 apply plugin: 'android-library'
 
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:1.5.0'
+    }
+}
+
 dependencies {
 }
 
