--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,10 +5,6 @@
 
     <uses-sdk android:minSdkVersion="10" android:targetSdkVersion="15" />
 
-    <application android:label="@string/app_name"
-        android:icon="@drawable/ic_launcher"
-        >
-
-    </application>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
 </manifest>
