Updated gradle build tools.

--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,10 @@ apply plugin: 'android-library'
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.5.0'
+        classpath 'com.android.tools.build:gradle:2.2.2'
     }
 }
 
